--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,13 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+#Junk
+.vscode/
+.idea/
+
 # dependencies
 /node_modules
 /.pnp
+/.husky
 .pnp.js
 
 # testing
@@ -17,6 +22,11 @@
 .env.development.local
 .env.test.local
 .env.production.local
+
+.eslintrc
+.eslintignore
+.prettierrc
+6
 
 npm-debug.log*
 yarn-debug.log*
